--- a/assignments/exercises/615-dom-debug/style.css
+++ b/assignments/exercises/615-dom-debug/style.css
@@ -1,3 +1,18 @@
-.sub-item {
-    padding: 10px;
+input {
+    width: 300px;
+    margin-left: 25px;
+    margin-top: 30px;
+}
+
+li {
+    font-size: 20px;
+    list-style-type: none;
+}
+
+select {
+    margin: 10px 20px;
+    border: 2px solid black;
+    border-radius: 5px;
+    width: 80px;
+    text-align: center
 }
